sass/modules/_ad.scss
%ad-pos {
  margin: 0 auto;
}

%med-rect {
  width: 300px;
}

.ad {
  /*@include container();*/

  /*margin-bottom: 1em;*/

  &__med-rect--article {
    @extend %ad-pos;
    @extend %med-rect;

    @include breakpoint($screen $medium-minor-start) {
      margin-left: 1em;
      float: right;
    }

    /*@include breakpoint($screen $medium-minor-start $xlarge-start) {*/
    @include breakpoint($screen $large-start) {
      float: right;
      width: 50%;
      clear: left;
      /*margin-left: 1em;*/
    };
  }

  &__med-rect-h--article {
    @extend %ad-pos;
    @extend %med-rect;

    @include breakpoint($screen $medium-minor-minor-start) {
      float: right;
      width: 50%;
      clear: left !important;
      margin-top: 1em;
      text-align: center;
      /*margin-left: 1em;*/
    };

    @include breakpoint($screen $large-minor-start) {
      width: 50%;
    }

  }

  &__med-rect--front {
    @extend %ad-pos;
    @extend %med-rect;
  }

  &__img {
    display: block;
    margin: 0 auto;
  }

  &--wide-shallow {
    @extend %ad-pos;
    /*display: inline-block;*/
    display: block;
    text-align: center;
    width: 100%;
    max-width: $article-max-width;
  }

  &:before {
    color: $gray;
    content: "Advertisement";
    margin-top: 0;
    margin-bottom: 1em;
    margin-right: auto;
    margin-left: auto;
    width: 12em;
    display: block;
    font-family: sans-serif;
    text-transform: uppercase;
    font-size: .5em;
    letter-spacing: .25em;
    text-align: center;
  }

  &:after {
    padding-bottom: 1em;
    margin-top: .5em;
    margin-left: auto;
    margin-right: auto;
    content: '';
    max-width: $site-width;
    display: block;
    /*border-bottom: 1px solid $lightgray;*/
  }

  &__group--front {
    @include clearfix;    
    width: 94%;
    margin: 0 auto;
    text-align: center;
  }

}

